Fix unit test failure